fix: Non mobile navigation not showing on 768px and social media overlaping mobile navigation

--- a/src/app/components/mobile-navigation/mobile-navigation.component.scss
+++ b/src/app/components/mobile-navigation/mobile-navigation.component.scss
@@ -37,6 +37,7 @@
     opacity: 0;
     height: calc(100vh - 100px);
     background: var(--primary-color);
+    z-index: 2;
     transition: .4s ease-in-out;
 
     &.active {
